MVC模式，RecyclerView的使用

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -295,4 +295,6 @@
     <!-- 海军色 -->
     <color name="black">#000000</color>
     <!-- 黑色 -->
+    <color name="transparent">#000000ff</color>
+    <!-- 黑色 -->
 </resources>
