--- a/app/src/main/res/layout/mvp_nav_act_layout.xml
+++ b/app/src/main/res/layout/mvp_nav_act_layout.xml
@@ -1,17 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <TextView
-        android:text="@string/ying"
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_marginTop="20dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+        <TextView
+            android:textSize="30sp"
+            android:textColor="@color/red"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ying" />
+
+        <ImageView
+            android:background="@color/red"
+            android:scaleType="fitXY"
+            android:layout_marginTop="12dp"
+            android:src="@mipmap/ying02"
+            android:layout_width="320dp"
+            android:layout_height="240dp"/>
+    </LinearLayout>
+
+
     <com.google.android.material.navigation.NavigationView
-        android:layout_gravity="start"
         android:id="@+id/mvp_nav_view"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
         app:headerLayout="@layout/mvp_nav_header"
-        app:menu="@menu/mvp_nav_menu"
-        android:layout_height="match_parent"/>
+        app:menu="@menu/mvp_nav_menu" />
 </androidx.drawerlayout.widget.DrawerLayout>
